--- a/package.json
+++ b/package.json
@@ -14,19 +14,21 @@
     "test:watch": "vitest"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@reduxjs/toolkit": "^2.2.0",
+    "@tanstack/react-virtual": "^3.13.18",
+    "axios": "^1.7.0",
+    "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
+    "nanoid": "^5.0.7",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "@reduxjs/toolkit": "^2.2.0",
-    "react-redux": "^9.1.0",
-    "axios": "^1.7.0",
-    "zod": "^3.23.0",
-    "date-fns": "^3.6.0",
     "react-hook-form": "^7.52.0",
-    "@hookform/resolvers": "^3.9.0",
     "react-icons": "^5.3.0",
-    "clsx": "^2.1.1",
-    "nanoid": "^5.0.7"
+    "react-redux": "^9.1.0",
+    "zod": "^3.23.0"
   },
   "devDependencies": {
     "@types/node": "^20",
