feat: update environment configuration, clean up code formatting, and implement news components

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,6 +1,6 @@
 # API Configuration
 NEXT_PUBLIC_API_URL=http://localhost:3000/api
 
-# NY Times API Configuration
-# Get your API key from: https://developer.nytimes.com/
-NEXT_PUBLIC_NYT_API_KEY=your_nytimes_api_key_here
+# Guardian Open Platform API
+# Get your API key from: https://open-platform.theguardian.com/access/
+NEXT_PUBLIC_GUARDIAN_API_KEY=your_guardian_api_key_here
