--- a/biome.json
+++ b/biome.json
@@ -7,13 +7,7 @@
   },
   "files": {
     "ignoreUnknown": false,
-    "ignore": [
-      "node_modules",
-      ".next",
-      "dist",
-      "build",
-      "**/*.css"
-    ]
+    "ignore": ["node_modules", ".next", "dist", "build", "**/*.css"]
   },
   "organizeImports": {
     "enabled": true
